--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "io_learning"
+name = "minigrep"
 version = "0.1.0"
-authors = ["captainlee1024 <644052732@qq.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
